creating an image using jlink